--- a/src/Data/projects.json
+++ b/src/Data/projects.json
@@ -16,13 +16,13 @@
       "id": 3,
       "title": "Tic Tac Toe game",
       "img": "ticTacToe",
-      "techStack": ["SCSS", "React.js", "Tsx/TS", "HTML"]
+      "techStack": ["SCSS", "React.js", "Jsx/JS", "HTML"]
     },
     {
       "id": 4,
       "title": "Coffe Shop page",
       "img": "coffeShop",
-      "techStack": ["SCSS", "Angular", "Tsx/TS", "HTML"]
+      "techStack": ["SCSS", "Angular", "RxJs", "HTML"]
     }
   ],
   "Full-Stack": [
@@ -30,13 +30,13 @@
       "id": 5,
       "title": "Todo App",
       "img": "todo",
-      "techStack": ["React.js", "SCSS", "HTML", "Tsx/TS"]
+      "techStack": ["React.js", "SCSS", "Postgres", "Node.js"]
     },
     {
       "id": 6,
       "title": "Facts app",
       "img": "factsapp",
-      "techStack": ["React.js", "SCSS", "HTML", "JSX"]
+      "techStack": ["React.js", "SCSS", "Supabase", "HTML"]
     }
   ],
   "Freelance": [
@@ -44,7 +44,7 @@
       "id": 7,
       "title": "Duval Agency",
       "img": "duval",
-      "techStack": ["React.js", "SCSS", "HTML", "Tsx/TS"]
+      "techStack": ["React.js", "SCSS", "Meta API", "Tsx/TS"]
     }
   ]
 }
